@@ -3,19 +3,23 @@ require 'spec/example/configuration'
 module Spec
   module Example
     class Configuration
-      attr_writer :use_transactional_fixtures, :use_instantiated_fixtures, :global_fixtures
-
       def initialize
         super
         Test::Unit::TestCase.fixture_path = RAILS_ROOT + '/spec/fixtures'
       end
-      
+
       def use_transactional_fixtures
-        @use_transactional_fixtures.nil? ? @use_transactional_fixtures = true : @use_transactional_fixtures
+        Test::Unit::TestCase.use_transactional_fixtures
+      end
+      def use_transactional_fixtures=(value)
+        Test::Unit::TestCase.use_transactional_fixtures = value
       end
       
       def use_instantiated_fixtures
-        @use_instantiated_fixtures ||= false
+        Test::Unit::TestCase.use_instantiated_fixtures
+      end
+      def use_instantiated_fixtures=(value)
+        Test::Unit::TestCase.use_instantiated_fixtures = value
       end
       
       def fixture_path
@@ -26,7 +30,10 @@ module Spec
       end
       
       def global_fixtures
-        @global_fixtures ||= []
+        ::Test::Unit::TestCase.fixture_table_names
+      end
+      def global_fixtures=(fixtures)
+        ::Test::Unit::TestCase.fixtures(*fixtures)
       end
     end
   end
