@@ -8,43 +8,43 @@ module Spec
 
     describe Configuration, "#use_transactional_fixtures" do
       it_should_behave_like "Spec::Example::Configuration"
-      
-      it "should default to true" do
-        @config.use_transactional_fixtures.should be(true)
+
+      it "should return Test::Unit::TestCase.use_transactional_fixtures" do
+        @config.use_transactional_fixtures.should == Test::Unit::TestCase.use_transactional_fixtures
       end
 
-      it "should set to false" do
+      it "should set Test::Unit::TestCase.use_transactional_fixtures to false" do
+        Test::Unit::TestCase.should_receive(:use_transactional_fixtures=).with(false)
         @config.use_transactional_fixtures = false
-        @config.use_transactional_fixtures.should be(false)
       end
 
-      it "should set to true" do
+      it "should set Test::Unit::TestCase.use_transactional_fixtures to true" do
+        Test::Unit::TestCase.should_receive(:use_transactional_fixtures=).with(true)
         @config.use_transactional_fixtures = true
-        @config.use_transactional_fixtures.should be(true)
       end
     end
 
     describe Configuration, "#use_instantiated_fixtures" do
       it_should_behave_like "Spec::Example::Configuration"
-      
-      it "should to false" do
-        @config.use_instantiated_fixtures.should be(false)
+
+      it "should return Test::Unit::TestCase.use_transactional_fixtures" do
+        @config.use_instantiated_fixtures.should == Test::Unit::TestCase.use_instantiated_fixtures
       end
 
-      it "should set to false" do
+      it "should set Test::Unit::TestCase.use_instantiated_fixtures to false" do
+        Test::Unit::TestCase.should_receive(:use_instantiated_fixtures=).with(false)
         @config.use_instantiated_fixtures = false
-        @config.use_instantiated_fixtures.should be(false)
       end
 
-      it "should set to true" do
+      it "should set Test::Unit::TestCase.use_instantiated_fixtures to true" do
+        Test::Unit::TestCase.should_receive(:use_instantiated_fixtures=).with(true)
         @config.use_instantiated_fixtures = true
-        @config.use_instantiated_fixtures.should be(true)
       end
     end
 
     describe Configuration, "#fixture_path" do
       it_should_behave_like "Spec::Example::Configuration"
-      
+
       it "should default to RAILS_ROOT + '/spec/fixtures'" do
         @config.fixture_path.should == RAILS_ROOT + '/spec/fixtures'
         Test::Unit::TestCase.fixture_path.should == RAILS_ROOT + '/spec/fixtures'
@@ -60,13 +60,9 @@ module Spec
     describe Configuration, "#global_fixtures" do
       it_should_behave_like "Spec::Example::Configuration"
 
-      it "should default to []" do
-        @config.global_fixtures.should == []
-      end
-
-      it "should set to false" do
-        @config.global_fixtures << :blah
-        @config.global_fixtures.should == [:blah]
+      it "should set fixtures on TestCase" do
+        Test::Unit::TestCase.should_receive(:fixtures).with(:blah)
+        @config.global_fixtures = [:blah]
       end
     end
   end
