@@ -1,3 +1,5 @@
+* Tighter integration with Rails fixtures. Take advantage of fixture caching to get performance improvements (Thanks to Pat Maddox, Nick Kallen, Jonathan Barnes, and Curtis)
+
 == Version 1.1.0-RC1
 
 Textmate Bundle users - this release adds a new RSpec bundle that highlights describe, it, before and after and
